--- a/Apps/app10/styles.css
+++ b/Apps/app10/styles.css
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100%;
   background: transparent;
-  z-index: 1600;
+  z-index: 100;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -50,7 +50,7 @@
   height: 625px;
   margin: 0 auto;
   position: relative;
-  z-index: 1500;
+  z-index: 1;
   opacity: 1 !important;
   padding: 40px;
   display: flex;
